--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ address {
   font-style: normal;
 }
 
-textarea{
+textarea {
   resize: none;
 }
 
@@ -255,19 +255,19 @@ img {
 }
 
 .hero-btn {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
   margin: 0 auto;
   margin-top: 30px;
   padding: 10px 32px;
   min-width: 216px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--white-primary-color);
   background-color: var(--background-btn-color);
   transition: background-color 250ms var(--timing-function);
@@ -441,10 +441,10 @@ img {
   margin-bottom: 50px;
   color: var(--title-text-color);
 }
-.clients-box{
+.clients-box {
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 .clients-list {
   display: flex;
@@ -453,12 +453,12 @@ img {
   flex-wrap: wrap;
   gap: 30px;
 }
-.clients-item{
+.clients-item {
   width: 170px;
   height: 92px;
 }
 .clients-link {
- display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -577,6 +577,81 @@ img {
   background-color: var(--accent-color);
 }
 
+.footer-form {
+  position: relative;
+  
+}
+
+.footer-form__field {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-form__field label {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-primary-color);
+}
+.footer-form__field input {
+  margin: 0;
+  margin-right: 12px;
+  padding: 15px 295px 15px 16px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--background-color-footer);
+}
+
+.footer-form__field input::placeholder {
+display: flex;
+align-items: center;
+  font-weight: 400;
+font-size: 16px;
+line-height: calc(20 / 16);
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-subscribe{
+display: flex;
+position: absolute;
+left: 355px;
+top: 35px;
+  
+}
+
+.footer-form__btn {
+  
+  justify-content: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+  margin-left: 12px;
+  padding: 10px 10px 10px 28px;
+  min-width: 200px;
+  min-height: 50px;
+background-color: var(--background-btn-color);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+ 
+font-weight: 700;
+font-size: 16px;
+line-height: calc(30 / 16);
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: var(--white-primary-color);
+transition: background-color 250ms var(--timing-function);  
+}
+.footer-form__btn:hover,
+.footer-form__btn:focus{
+  background-color: #409be6;
+}
 /* _____________________________________Menu BUTTONS Portfolio_________________________ */
 .menu-list {
   margin-bottom: 50px;
@@ -594,7 +669,8 @@ img {
   padding: 6px 22px;
   color: var(--title-text-color);
   background-color: var(--background-color-team);
-  transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function), filter 250ms var(--timing-function);
+  transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function),
+    filter 250ms var(--timing-function);
 }
 
 .menu-list__btn:hover,
@@ -652,8 +728,8 @@ img {
   overflow: hidden;
 }
 
-.project-link:hover .overlay-thumb, 
-.project-link:focus .overlay-thumb  {
+.project-link:hover .overlay-thumb,
+.project-link:focus .overlay-thumb {
   opacity: 1;
   transform: translateY(0%);
 }
@@ -667,7 +743,7 @@ img {
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
-  transition:transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
 }
 
 .overlay-text {
@@ -682,7 +758,7 @@ img {
   color: var(--white-primary-color);
 }
 
-/* ___________________________BACKDROP__________________________ */
+/* ___________________________MODAL+FORM+BACKDROP__________________________ */
 
 .backdrop {
   position: fixed;
@@ -734,4 +810,109 @@ img {
 .icon-close {
   fill: currentColor;
 }
+/* ___________________________FORM_______________________________ */
+.form {
+  width: 526px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 39px 40px 41px;
+}
+.form-title {
+  margin: 0;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.form-field input {
+  margin: 0;
+  padding: 11px 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
 
+.form-field label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+}
+
+.form-field input::placeholder {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-comment {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 11px 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  min-height: 120px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--title-text-color);
+}
+.agreement-text {
+  margin: 0;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.policy-link{
+  color: var(--accent-color);
+}
+
+.agreement-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 10px 52px;
+  box-sizing: border-box;
+  min-width: 200px;
+  min-height: 50px;
+  background-color: var(--background-btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  color: var(--white-primary-color);
+  transition: background-color 250ms var(--timing-function);
+}
+
+.agreement-btn:hover,
+.agreement-btn:focus {
+  background-color: #409be6;
+}
+
+.form-comment input[type='checkbox'] {
+}
