--- a/css/styles.css
+++ b/css/styles.css
@@ -66,10 +66,6 @@ address {
   font-style: normal;
 }
 
-textarea {
-  resize: none;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--primary-text-color);
@@ -357,10 +353,10 @@ img {
   background-color: var(--background-color-team);
 }
 .team__title {
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   color: var(--title-text-color);
@@ -436,7 +432,6 @@ img {
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
-  text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   color: var(--title-text-color);
@@ -490,11 +485,11 @@ img {
 .footer-container {
   display: flex;
   align-items: baseline;
+  gap: 93px;
 }
 
 .footer-info {
   display: block;
-  margin-right: 70px;
 }
 
 .logo__footer {
@@ -541,7 +536,6 @@ img {
 
 .footer-soc {
   display: block;
-  margin-right: 93px;
 }
 
 .footer-soc-title {
@@ -577,17 +571,12 @@ img {
   background-color: var(--accent-color);
 }
 
-.footer-form {
-  position: relative;
-  
-}
-
-.footer-form__field {
+.footer-form-main {
   display: flex;
-  flex-direction: column;
+  gap: 12px;
 }
 
-.footer-form__field label {
+.footer-form__label {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -596,62 +585,68 @@ img {
   text-transform: uppercase;
   color: var(--white-primary-color);
 }
-.footer-form__field input {
+.footer-form__input {
   margin: 0;
-  margin-right: 12px;
-  padding: 15px 295px 15px 16px;
+  padding: 16px;
   width: 358px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: var(--background-color-footer);
-}
 
-.footer-form__field input::placeholder {
-display: flex;
-align-items: center;
   font-weight: 400;
-font-size: 16px;
-line-height: calc(20 / 16);
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  letter-spacing: 0.03em;
+  color: var(--white-primary-color);
 }
 
-.footer-subscribe{
-display: flex;
-position: absolute;
-left: 355px;
-top: 35px;
-  
+.footer-form__input::placeholder {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form__text {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .footer-form__btn {
-  
+  display: flex;
   justify-content: center;
   box-sizing: border-box;
   margin: 0 auto;
-  margin-left: 12px;
-  padding: 10px 10px 10px 28px;
-  min-width: 200px;
-  min-height: 50px;
-background-color: var(--background-btn-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
- 
-font-weight: 700;
-font-size: 16px;
-line-height: calc(30 / 16);
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--white-primary-color);
-transition: background-color 250ms var(--timing-function);  
+  gap: 10px;
+  padding: 10px 28px 10px 28px;
+  width: 200px;
+  height: 50px;
+  background-color: var(--background-btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--white-primary-color);
+  transition: background-color 250ms var(--timing-function);
 }
 .footer-form__btn:hover,
-.footer-form__btn:focus{
+.footer-form__btn:focus {
   background-color: #409be6;
 }
+
 /* _____________________________________Menu BUTTONS Portfolio_________________________ */
 .menu-list {
   margin-bottom: 50px;
@@ -780,7 +775,8 @@ transition: background-color 250ms var(--timing-function);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 528px;
+  padding: 40px 39px 40px 41px;
+  width: 528px;
   min-height: 581px;
   background-color: var(--white-primary-color);
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
@@ -815,7 +811,6 @@ transition: background-color 250ms var(--timing-function);
   width: 526px;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px 39px 40px 41px;
 }
 .form-title {
   margin: 0;
@@ -832,14 +827,7 @@ transition: background-color 250ms var(--timing-function);
   flex-direction: column;
   margin-bottom: 10px;
 }
-.form-field input {
-  margin: 0;
-  padding: 11px 12px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-
-.form-field label {
+.form-field__label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
@@ -848,7 +836,40 @@ transition: background-color 250ms var(--timing-function);
   color: var(--primary-text-color);
 }
 
-.form-field input::placeholder {
+.input-wrap{
+position: relative;
+}
+
+.form-field__input {
+  margin: 0;
+  width: 100%;
+  height: 39px;
+  padding: 11px 15px 11px 35px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  outline-color: transparent;
+}
+.form-field__input:focus{
+  border: 2px solid var(--accent-color);
+}
+.form-field__input:focus + .form-field__icon{
+  fill: var(--accent-color);
+}
+
+.form-field__icon{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+}
+
+.form-field__input::placeholder {
   display: flex;
   align-items: center;
   font-weight: 400;
@@ -859,39 +880,78 @@ transition: background-color 250ms var(--timing-function);
 }
 
 .form-comment {
+  width: 100%;
+  height: 118px;
   margin: 0;
   margin-bottom: 20px;
-  padding: 11px 12px;
+  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  min-height: 120px;
+  resize: none;
+
   font-weight: 400;
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--title-text-color);
+  outline-color: transparent;
 }
-.agreement-text {
-  margin: 0;
-  text-align: center;
-  font-family: inherit;
+.form-comment:focus{
+  border: 2px solid var(--accent-color);
+}
+
+.form-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.check-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
   font-weight: 400;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-.policy-link{
+.check-text span{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 8.38px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 3px;
+  fill: transparent;
+}
+.input-check:checked + .check-text span{
+  background-color: var(--accent-color);
+  border-color: transparent;
+  fill: var(--white-primary-color);
+}
+
+.input-check:focus + .check-text span{
+  border-color: var(--accent-color);
+  
+}
+
+.policy-link {
   color: var(--accent-color);
 }
 
-.agreement-btn {
+.send-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 30px;
   padding: 10px 52px;
   box-sizing: border-box;
   min-width: 200px;
@@ -909,9 +969,9 @@ transition: background-color 250ms var(--timing-function);
   transition: background-color 250ms var(--timing-function);
 }
 
-.agreement-btn:hover,
-.agreement-btn:focus {
-  background-color: #409be6;
+.send-btn:hover,
+.send-btn:focus {
+  background-color: #188CE8;
 }
 
 .form-comment input[type='checkbox'] {
