--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,6 @@ img {
 .footer-container {
   display: flex;
   align-items: baseline;
-  gap: 93px;
 }
 
 .footer-info {
@@ -536,6 +535,7 @@ img {
 
 .footer-soc {
   display: block;
+  margin-left: 70px;
 }
 
 .footer-soc-title {
@@ -571,6 +571,20 @@ img {
   background-color: var(--accent-color);
 }
 
+.footer-form {
+  margin-left: auto;
+}
+
+.footer-form__text {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .footer-form-main {
   display: flex;
   gap: 12px;
@@ -589,6 +603,7 @@ img {
   margin: 0;
   padding: 16px;
   width: 358px;
+  height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -609,16 +624,6 @@ img {
   line-height: calc(20 / 16);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-form__text {
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
 }
 
 .footer-form__btn {
@@ -770,14 +775,12 @@ img {
 }
 .modal {
   position: absolute;
-  display: flex;
-  justify-content: flex-end;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px 39px 40px 41px;
+  padding: 40px;
   width: 528px;
-  min-height: 581px;
+  height: 581px;
   background-color: var(--white-primary-color);
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
@@ -807,13 +810,8 @@ img {
   fill: currentColor;
 }
 /* ___________________________FORM_______________________________ */
-.form {
-  width: 526px;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 .form-title {
-  margin: 0;
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -836,8 +834,8 @@ img {
   color: var(--primary-text-color);
 }
 
-.input-wrap{
-position: relative;
+.input-wrap {
+  position: relative;
 }
 
 .form-field__input {
@@ -854,19 +852,21 @@ position: relative;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   outline-color: transparent;
+  transition: border 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
-.form-field__input:focus{
+.form-field__input:focus {
   border: 2px solid var(--accent-color);
 }
-.form-field__input:focus + .form-field__icon{
+.form-field__input:focus + .form-field__icon {
   fill: var(--accent-color);
 }
 
-.form-field__icon{
+.form-field__icon {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 12px;
+  transition: fill 250ms var(--timing-function);
 }
 
 .form-field__input::placeholder {
@@ -878,25 +878,25 @@ position: relative;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
+.form-textarea {
+  margin-bottom: 20px;
+}
 .form-comment {
   width: 100%;
-  height: 118px;
-  margin: 0;
-  margin-bottom: 20px;
+  height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
-
   font-weight: 400;
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--title-text-color);
   outline-color: transparent;
+  transition: border 250ms var(--timing-function);
 }
-.form-comment:focus{
+.form-comment:focus {
   border: 2px solid var(--accent-color);
 }
 
@@ -918,8 +918,9 @@ position: relative;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
-.check-text span{
+.check-text span {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -929,19 +930,21 @@ position: relative;
   border: 2px solid var(--title-text-color);
   border-radius: 3px;
   fill: transparent;
+  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
 }
-.input-check:checked + .check-text span{
+.input-check:checked + .check-text span {
   background-color: var(--accent-color);
   border-color: transparent;
   fill: var(--white-primary-color);
 }
 
-.input-check:focus + .check-text span{
+.input-check:focus + .check-text span {
   border-color: var(--accent-color);
-  
 }
 
 .policy-link {
+  margin-left: 7px;
   color: var(--accent-color);
 }
 
@@ -971,8 +974,5 @@ position: relative;
 
 .send-btn:hover,
 .send-btn:focus {
-  background-color: #188CE8;
-}
-
-.form-comment input[type='checkbox'] {
+  background-color: #188ce8;
 }
